k8s-common/namespace_prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
    app.kubernetes.io/part-of: app
